syntax = "proto3";

option csharp_namespace = "GrpcUrl";

package UrlApi;

service Url {
  rpc GetUrlByKey (KeyRequest) returns (UrlAssociationReply);
}

message KeyRequest {
  string key = 1;
}

message UrlAssociationReply {
  string key = 1;
  string address = 2;
}
